# to-do-list

./: .clang-format  .gitignore  CMakeLists.txt  ToDoList.cpp  ToDoList.h  main.cpp  package_dependencies.sh  resources.qrc  to_do.rc  update_version.sh  version.txt
include/: AboutDialog.h  CustomListWidget.h  SettingsDialog.h  TemplateDialog.h  TemplateDialog.inl  ToDoList.h
src/: AboutDialog.cpp  CustomListWidget.cpp  SettingsDialog.cpp  ToDoList.cpp
